--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@handlewithcare/prosemirror-inputrules",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
+  "license": "MIT",
   "packageManager": "yarn@4.9.3",
   "module": "dist/index.js",
   "types": "./dist/index.d.ts",
