--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "README.md",
     "LICENSE"
   ],
+  "scripts": {
+    "demo": "yarn vite dev",
+    "build": "yarn tsc",
+    "prepack": "yarn build"
+  },
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "^24.3.0",
